--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,7 @@ footer {
 .btn_apply {
     background-color: #F16973;
     border-radius: 4px;
+    border: none;
     padding: 10px 14px;
     text-align: center;
     display: inline-block;
@@ -244,6 +245,7 @@ footer {
     color: #fff;
     font-family: 'Lato', sans-serif;
     margin-top: 1rem;
+    cursor: pointer;
 }
 
 .btn_apply:hover {
@@ -342,6 +344,56 @@ label {
     font-weight: 700;
     color: #fff;
     margin: 1.5rem auto;
+    cursor: pointer;
+}
+
+/* The Modal (background) */
+#modal { /* Hidden by default */
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 20% auto; /* 15% from the top and centered */
+    padding: 30px;
+    border: 1px solid #888;
+    border-radius: 4px;
+    width: 300px;
+    text-align: center;             
+}
+
+.modal-content .modal_txt {
+    font-size: 20px;
+    color: #34344A;
+    text-align: center;
+}
+
+/* The Close Button */
+#modal_close_btn {
+    color: #aaa;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 4px 16px;
+    border-radius: 4px;
+    border: solid #aaa 1px;
+    margin-top: 20px;
+}
+
+#modal_close_btn:hover,
+#modal_close_btn:focus {
+    color: black;
+    text-decoration: none;
     cursor: pointer;
 }
 
